...
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="FnP-1p-9fm">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="80K-6S-cgE">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Bul-8o-cdq"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YPWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-Vy-div" userLabel="Like button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton">
                                                        <bool key="isElement" value="NO"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="1jo-QJ-ZAf"/>
                                                        <constraint firstAttribute="height" constant="44" id="4cm-f9-U2n"/>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="OoN-aA-swq"/>
...
                                <connections>
                                    <outlet property="delegate" destination="IQX-7N-Ftt" id="sxF-FH-Vxc"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0iq-IX-ZbB">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="6LK-g3-jLQ"/>
                                    <constraint firstAttribute="height" constant="48" id="XfH-VB-tYd"/>
                                </constraints>
...
